vlib/v/checker/tests/option_map_err.vv
struct OptionalMap {
	opmap ?map[string]f64
}

fn main() {
	op := OptionalMap{
		opmap: {
			'1': 0.0
		}
	}
	assert op.opmap or {
		{
			'1': 0.0
		}
	}['1'] == 0.0

	op2 := OptionalMap{
		opmap: {
			'1': 1.0
		}
	}
	assert op2.opmap['1'] == 1.0
}
